--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,7 @@ a .namelogo-name {
 
 .strong{
   font-family: var(--secondary-font);
-  font-weight: var(--weight-bold)
+  font-weight: var(--weight-bold);
 }
 
 .centerBtn{
@@ -260,8 +260,8 @@ tr :last-child{
 
 .tech-icon{
   width: 100%;
-  margin: 0 auto;
-  padding: 15px;
+  margin: 60px auto;
+  padding: 0 15px;
   border-radius: 30px;
 }
 
@@ -368,7 +368,8 @@ svg{
 /* CONTACT page content */
 .contact-container{
   max-width: 900px;
-  margin: 40px 12%;
+  margin: 40px auto;
+  text-align: center;
 }
 
 input{
@@ -508,7 +509,7 @@ footer {
 
   .about-container{
     padding: 0;
-    margin: 0 ;
+    margin: 0;
   }
 
   .about-container__item{
@@ -522,7 +523,7 @@ footer {
   }
 
   .centerBtn{
-    width: 40vw
+    width: 40vw;
   }
 
   .project-list {
