--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -234,7 +234,7 @@ a .namelogo-name {
 
 .strong{
   font-family: 'Merriweather', serif;
-  font-weight: 700
+  font-weight: 700;
 }
 
 .centerBtn{
@@ -275,8 +275,8 @@ tr :last-child{
 
 .tech-icon{
   width: 100%;
-  margin: 0 auto;
-  padding: 15px;
+  margin: 60px auto;
+  padding: 0 15px;
   border-radius: 30px;
 }
 
@@ -383,7 +383,8 @@ svg{
 /* CONTACT page content */
 .contact-container{
   max-width: 900px;
-  margin: 40px 12%;
+  margin: 40px auto;
+  text-align: center;
 }
 
 input{
@@ -533,7 +534,7 @@ footer {
 
   .about-container{
     padding: 0;
-    margin: 0 ;
+    margin: 0;
   }
 
   .about-container__item{
@@ -547,7 +548,7 @@ footer {
   }
 
   .centerBtn{
-    width: 40vw
+    width: 40vw;
   }
 
   .project-list {
