--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
 :root {
+
+  /* Colors used */
   --body-color: #f8fafa;
   --body-color-darken: #f5f5f5;
   --primary-color: #000080;
@@ -9,12 +11,15 @@
   --shadow: 1px 3px 5px 0px rgba(0,0,0,0.3);
   --shadow-darken : 3px 5px 7px 0px rgba(0,0,0,0.3);
 
+  /* Text and Fonts */
   --text-size: 13pt;
   --h1-size: 2.6em;
   --h2-size: 1.4em;
   --weight-bold: 700;
   --primary-font: 'Caudex', serif;
   --secondary-font: 'Merriweather', serif;
+
+  /* Mobile sizes */
 }
 
 * {
@@ -331,11 +336,6 @@ svg{
   grid-gap: 20px;
 }
 
-.project-list__img{
-  max-width: 100%;
-  margin: auto;
-}
-
 .project-list__item {
   display: inline-block;
   width: 33%;
@@ -343,7 +343,18 @@ svg{
   padding: 10px 20px;
   border-radius: 3%;
   width: auto;
+  text-align: center;
   background-color: var(--body-color-darken);
+}
+
+.project-list__img{
+  max-width: 100%;
+  margin: auto;
+  height: 300px;
+}
+
+.project-list p {
+  text-align: left;
 }
 
 .project-list__item:last-child {
