--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -1,14 +1,3 @@
-/*
-Colors used
-Primary Color:         #000080; (Dark Blue Klein)
-Primary Color lighten: #0000CD; (Blue Klein)
-Secondary Color:       #0000FF; (Light Blue)
-Tertiary Color:        #9c9c9c; (Darkgrey)
-Text Color:
-Primary text font:     'Caudex', serif
-Secondary text font:   'Merriweather', serif
-*/
-
 * {
   box-sizing: border-box;
 }
@@ -355,11 +344,6 @@ svg{
   grid-gap: 20px;
 }
 
-.project-list__img{
-  max-width: 100%;
-  margin: auto;
-}
-
 .project-list__item {
   display: inline-block;
   width: 33%;
@@ -367,7 +351,18 @@ svg{
   padding: 10px 20px;
   border-radius: 3%;
   width: auto;
+  text-align: center;
   background-color: #f5f5f5;
+}
+
+.project-list__img{
+  max-width: 100%;
+  margin: auto;
+  height: 300px;
+}
+
+.project-list p {
+  text-align: left;
 }
 
 .project-list__item:last-child {
